fix navigation on mobile

--- a/_src/sass/main.scss
+++ b/_src/sass/main.scss
@@ -18,3 +18,7 @@
 	 clip: rect(0,0,0,0);
 	 border: 0;
  }
+
+ #sidenav-overlay {
+    z-index: 996;
+}
